[dataengines/potd] Fix flickr provider

Now flickr provider always fetch the keys from KDE Invent. If the key
expires, we just update it in KDE Invent, and users don't need to do
anything.

Fix #3

BUG: 427566