dataengines/potd/potdprovider.cpp
@@ -1,13 +1,16 @@
-/*
- *   SPDX-FileCopyrightText: 2007 Tobias Koenig <tokoe@kde.org>
- *
- *   SPDX-License-Identifier: GPL-2.0-or-later
- */
+// SPDX-FileCopyrightText: 2007 Tobias Koenig <tokoe@kde.org>
+// SPDX-FileCopyrightText: 2021 Guo Yunhe <i@guoyunhe.me>
+// SPDX-License-Identifier: GPL-2.0-or-later
 
 #include "potdprovider.h"
 
-// Qt
 #include <QDate>
+#include <QDebug>
+
+#include <KConfig>
+#include <KConfigGroup>
+
+#define CONFIG_ROOT_URL "https://invent.kde.org/plasma/kdeplasma-addons/-/raw/master/dataengines/potd/"
 
 class PotdProviderPrivate
 {
@@ -39,6 +42,10 @@ PotdProvider::PotdProvider(QObject *parent, const QVariantList &args)
         d->name = QStringLiteral("Unknown");
         d->identifier = d->name;
     }
+
+    QString configFileName = d->identifier + QStringLiteral(".conf");
+    configRemoteUrl = QUrl(QStringLiteral(CONFIG_ROOT_URL) + configFileName);
+    configLocalUrl = QUrl(QStandardPaths::writableLocation(QStandardPaths::GenericCacheLocation) + QLatin1String("/plasma_engine_potd/") + configFileName);
 }
 
 PotdProvider::~PotdProvider()
@@ -63,4 +70,53 @@ bool PotdProvider::isFixedDate() const
 QString PotdProvider::identifier() const
 {
     return d->identifier;
+}
+
+void PotdProvider::refreshConfig()
+{
+    // You can only refresh it once in a provider's life cycle. It avoids heavy
+    // loads to our servers.
+    if (!refreshed)
+        return;
+
+    KIO::StoredTransferJob *job = KIO::storedGet(configRemoteUrl, KIO::NoReload, KIO::HideProgressInfo);
+    connect(job, &KIO::StoredTransferJob::finished, this, &PotdProvider::configRequestFinished);
+
+    refreshed = true;
+}
+
+void PotdProvider::configRequestFinished(KJob *_job)
+{
+    KIO::StoredTransferJob *job = static_cast<KIO::StoredTransferJob *>(_job);
+    if (job->error()) {
+        Q_EMIT error(this);
+        qDebug() << "configRequestFinished error: failed to fetch data";
+        return;
+    }
+
+    KIO::StoredTransferJob *putJob = KIO::storedPut(job->data(), configLocalUrl, -1);
+    connect(putJob, &KIO::StoredTransferJob::finished, this, &PotdProvider::configWriteFinished);
+}
+
+void PotdProvider::configWriteFinished(KJob *_job)
+{
+    KIO::StoredTransferJob *job = static_cast<KIO::StoredTransferJob *>(_job);
+    if (job->error()) {
+        Q_EMIT error(this);
+        qDebug() << "configWriteFinished error: failed to write data";
+        return;
+    }
+
+    loadConfig();
+}
+
+void PotdProvider::loadConfig()
+{
+    KConfig config(configLocalUrl.toString());
+
+    KConfigGroup apiGroup = config.group(QStringLiteral("API"));
+    QString apiKey = apiGroup.readEntry(QStringLiteral("API_KEY"));
+    QString apiSecret = apiGroup.readEntry(QStringLiteral("API_SECRET"));
+
+    Q_EMIT configLoaded(apiKey, apiSecret);
 }
